2013-08-09  Mojca Miklavec <mmiklavec@users.sourceforge.net>

	* aquaterm/AQTPath.m: silence compiler warning with parenthesis

	* aquaterm/AQTClientManager.m: compiler warning - casting to (long)

	* aquaterm/Demo.m: explicit cast to (unichar) to avoid compiler
	  warnings, replace 'Song Regular' by 'STSong' to display Chinese

	* aquaterm/AQTPlot.m: replace deprecated NSSavePanel -filename with
	  -URL -path

	* aquaterm/Timing.m: remove unused variable

2013-08-09  Jeremy Huddleston Sequoia <jeremyhu@macports.org>

	* aquaterm/AQTController.m,
	  aquaterm/AquaTerm.xcodeproj/project.pbxproj: drop unused
	  deprecated Message.framework to alow compilation on 10.9

2012-07-30  Mojca Miklavec <mmiklavec@users.sourceforge.net>

	* Version 1.1.1 released.

	* aquaterm/ChangeLog, aquaterm/gitlog2changelog.py: Update ChangeLog
	  and release version 1.1.1.

2012-07-01  Mojca Miklavec <mmiklavec@users.sourceforge.net>

	* adapters/pgplot/aqdriv.m, adapters/pgplot/g77_gcc_AQT.conf,
	  adapters/pgplot/xlf_gcc_AQT.conf: use -framework AquaTerm instead
	  of -laquaterm in pgplot

2012-06-01  Mojca Miklavec <mmiklavec@users.sourceforge.net>

	* aquaterm/AquaTerm.xcodeproj/project.pbxproj: Define
	  LOCAL_FRAMEWORKS_DIR, change USER_APPS_DIR->LOCAL_APPS_DIR

2012-05-30  Mojca Miklavec <mmiklavec@users.sourceforge.net>

	* aquaterm/AquaTerm.pmdoc/02aquaterm-contents.xml,
	  aquaterm/AquaTerm.pmdoc/02aquaterm.xml,
	  aquaterm/AquaTerm.xcodeproj/project.pbxproj: Resolve some Xcode
	  warnings  - Info.plist was duplicated in AquaTerm.framework removed
	  from xcodeproject and pmdoc - component.id changed from
	  net.sourceforge.AquaTerm_Framework to
	  net.sourceforge.aquaterm.framework in pmdoc - remove
	  'GCC_ENABLE_FIX_AND_CONTINUE = NO' from xcodeproject

	* aquaterm/AQTController.m: yet another place for a version bump from
	  1.1.0 to 1.1.1

	* aquaterm/English.lproj/Credits.rtf, aquaterm/InstallerLicense.rtf: