@@ -76,7 +76,7 @@ Event handling of user input is provided through an optional callback function.
 
 - (void)release
 {
-   [_clientManager logMessage:[NSString stringWithFormat:@"adapter rc = %d", [self retainCount]] logLevel:3];
+   [_clientManager logMessage:[NSString stringWithFormat:@"adapter rc = %lu", (unsigned long)[self retainCount]] logLevel:3];
    [super release];
 }
 
