@@ -1,3 +1,10 @@
+2014-01-31  Mojca Miklavec <mmiklavec@users.sourceforge.net>
+
+	* aquaterm/AQTAdapter.m, aquaterm/AQTClientManager.m,
+	  aquaterm/AQTModel.m, aquaterm/AQTPlot.m: silence compiler warning:
+	  values of type 'NSUInteger' should not be used as format arguments;
+	  add an explicit cast to 'unsigned long' instead
+
 2013-08-09  Mojca Miklavec <mmiklavec@users.sourceforge.net>
 
 	* aquaterm/AQTPath.m: silence compiler warning with parenthesis
